# nacos_rust_client

./: .gitignore  Cargo.toml  README.md  application-dev.yaml  application-remote-copy.yaml  application-remote.yaml  application.json
src/: hello_controller.rs  lib.rs  main.rs  types.rs
